RESOLVED FIXED140742
[iOS] Many compositing tests fail in DumpRenderTree due to contentsOpaque difference
https://bugs.webkit.org/show_bug.cgi?id=140742
Summary [iOS] Many compositing tests fail in DumpRenderTree due to contentsOpaque dif...
Daniel Bates
Reported 2015-01-21 14:27:09 PST
Many compositing tests fail in DumpRenderTree due to contentsOpaque difference because the main frame's RenderView layer is always transparent in iOS WebKit1.
Attachments
Patch (9.99 KB, patch)
2015-01-21 14:31 PST, Daniel Bates
no flags
Daniel Bates
Comment 1 2015-01-21 14:31:21 PST
Simon Fraser (smfr)
Comment 2 2015-01-21 14:41:23 PST
Comment on attachment 245092 [details] Patch Why don't we just not dump contentsOpaque for this layer.
Daniel Bates
Comment 3 2015-01-21 14:59:18 PST
(In reply to comment #2) > Comment on attachment 245092 [details] > Patch > > Why don't we just not dump contentsOpaque for this layer. Simon and I talked about this on IRC today (01/21). We felt there is value in dumping the contentsOpaque for the main frame's RenderView layer for tiled drawing scrolling tests (e.g. tests under LayoutTests/platform/mac-wk2/tiled-drawing/scrolling).
Daniel Bates
Comment 4 2015-01-21 15:42:09 PST
Comment on attachment 245092 [details] Patch Clearing flags on attachment: 245092 Committed r178868: <http://trac.webkit.org/changeset/178868>
Daniel Bates
Comment 5 2015-01-21 15:42:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.