Source/WebCore/platform/graphics/GraphicsLayerClient.h
@@ -117,6 +117,8 @@ public:
 
     virtual bool needsPixelAligment() const { return false; }
 
+    virtual bool needsIOSDumpRenderTreeMainFrameRenderViewLayerIsAlwaysOpaqueHack(const GraphicsLayer&) const { return false; }
+
 #ifndef NDEBUG
     // RenderLayerBacking overrides this to verify that it is not
     // currently painting contents. An ASSERT fails, if it is.
